# rlz4

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rakefile  rlz4.gemspec
.github/workflows/: ci.yml
bench/: bench.rb
ext/rlz4/: Cargo.toml  extconf.rb
ext/rlz4/src/: lib.rs
lib/: rlz4.rb
lib/rlz4/: block_codec.rb  dictionary.rb  frame_codec.rb  version.rb
test/: test_helper.rb  test_rlz4.rb
