[package]
name    = "rlz4"
version = "0.2.0"
edition = "2021"

[lib]
name       = "rlz4"
crate-type = ["cdylib", "rlib"]

[dependencies]
lz4_flex = { path = "../../../lz4_flex", default-features = false, features = ["frame", "std", "safe-encode", "safe-decode"] }
magnus   = "0.8"
rb-sys   = "0.9"

[build-dependencies]
rb-sys = "0.9"
